# py-libp2p

./: .bumpversion.cfg  .dockerignore  .env  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  AI_FEATURES_QUICKSTART.md  API_SPEC_GO_IPFS_LITE.txt  BITSWAP_ISSUE_FIX.md  Bitswap Implementation Status and Roadmap.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.issue391  FILE_SHARING_VERIFICATION.md  FIXES_SUMMARY.md  FLOODSUB_IMPLEMENTATION.md  Filecoin_Retro_PGF.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-APACHE  MANIFEST.in  Makefile  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PR_DISCUSSION_TEMPLATE.md  Pipfile  RANDOM_WALK_README.md  README.md  RESOURCE_MANAGER_ENHANCEMENT_PLAN.md  SECURITY.md  TESTING_GUIDE.md  UV_MIGRATION_SUMMARY.md  VERIFICATION_RESULTS.md  audit.txt  (+46 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.project-template/: fill_template_vars.py  refill_template_vars.py  template_vars.txt
benchmarks/: bench_issue391.py  bench_noise_pq.py  dht_performance_benchmark.py  results.md
connection/: raw_connection.py  raw_connection_interface.py
docs/: HOLE_PUNCHING.md  Makefile  PROTOBUF_FIX.md  advertising_addresses.rst  ai_features.rst  architecture.md  codec.rst  comparison.md  conf.py  contributing.rst  example.pnet.rst  example.pubsub.rst  examples.a2a_http_payment_demo.rst  examples.a2a_payment_demo.rst  examples.announce_addrs.rst  examples.autotls.rst  examples.bitswap.rst  examples.chat.rst  examples.cid.rst  examples.circuit_relay.rst  examples.connection_health_monitoring.rst  examples.connection_management.rst  examples.echo.rst  examples.filecoin.rst  examples.floodsub.rst  examples.health_monitoring.rst  examples.hybrid_discovery.rst  examples.identify.rst  examples.identify_push.rst  examples.interop.rst  examples.mDNS.rst  examples.metrics.rst  examples.multi_transport.rst  examples.multiple_connections.rst  examples.nat.rst  examples.path_handling.rst  examples.perf.rst  examples.ping.rst  examples.pubsub.rst  examples.random_walk.rst  (+98 more)
examples/: 01_embeddable_peers.py  02_dht_discovery.py  03_ipld_node.py  04_pin_and_gc.py  05a_localstore_write.py  05a_write.py  05b_localstore_read.py  05b_read.py  06_http_api.sh  07_reprovider.sh  08_verifiable_inference.py  09_kubo_interop.py  10_ipld_linked_dag.py  11_car_export_import.py  12_streaming_large_file.py  13_agent_memory_chain.py  14_distributed_rag.py  15_ipns_mutable_registry.py  16_metrics_dashboard.py  17_concurrent_ingestion_benchmark.py  18_ipns_trust_boundary.py  19_filecoin_pipeline.py  20_kubo_round_trip.py  21_resource_footprint.py  README.md  agent_inference_trace.car  ai_features_demo.py  bitswap_payment_example.py  browser_wss_demo.py  demo_1_embeddable_peers.py  demo_2_dht_discovery.py  demo_3_ipld_node.py  demo_5a_write.py  demo_5b_read.py  enhanced_swarm_example.py  health_monitoring_example.py  multi_transport_analysis.md  path_handling.py  path_handling_demo.py  proxy_websocket_demo.py  (+6 more)
host/: __init__.py  basic_host.py  host_interface.py
interop/: Dockerfile  Makefile  README.md  arch.py  lib.py  py_peer.py  run_interop.sh  run_kubo_interop.sh  run_py_py_interop.sh  test.py  test_interop.py
interop/perf/: Dockerfile  constraints.txt  perf_test.py  pyproject.toml
interop/transport/: Dockerfile  MIGRATION_NOTES.md  NEW_SPEC_2026.md  ping_test.py  ping_test.py.old_format  pyproject.toml
kad-dht/: __init__.py
libp2p/: __init__.py  abc.py  abc_async.py  cancellable.py  capabilities.py  connection_types.py  custom_types.py  encoding_config.py  entrypoints.py  exceptions.py  identity_utils.py  libp2p.py  logger.py  pad.py  ping.py  providers.py  requirements.py  service.py  typing.py  utils.py
muxer/: muxed_connection.py  muxed_connection_interface.py  muxed_stream.py  muxed_stream_interface.py  smux_multiplex.py
network/: connection_interface.py  listener_interface.py  multiaddr.py  network_interface.py  stream.py  stream_interface.py  swarm.py  tcp.py  walkthrough.txt
newsfragments/: 1009.bugfix.rst  1009.internal.rst  1015.feature.rst  1020.bugfix.rst  1034.bugfix.rst  1037.bugfix.rst  1039.misc.rst  1044.bugfix.rst  1044.internal.rst  1046.internal.rst  1059.bugfix.rst  1070.feature.rst  1071.bugfix.rst  1072.feature.rst  1073.feature.rst  1078.misc.rst  1081.bugfix.rst  1084.bugfix.rst  1086.internal.rst  1093.feature.rst  1095.feature.rst  1097.internal.rst  1100.feature.rst  1102.internal.rst  1106.feature.rst  1108.bugfix.rst  1111.feature.rst  1115.internal.rst  1118.bugfix.rst  1120.bugfix.rst  1121.feature.rst  1124.bugfix.rst  1128.bugfix.rst  1144.feature.rst  1148.feature.rst  1157.feature.rst  1159.bugfix.rst  1164.bugfix.rst  1169.feature.rst  1171.feature.rst  (+295 more)
peer/: README.md  addrbook_interface.py  id.py  peerdata.py  peerdata_interface.py  peerinfo.py  peermetadata_interface.py  peerstore.py  peerstore_interface.py
proof-of-concept/: README.md  __init__.py  abc.py  base.py  exceptions.py  manager.py  stats.py  utils.py
protocol_muxer/: multiselect.py  multiselect_client.py  multiselect_client_interface.py  multiselect_communicator.py  multiselect_communicator_interface.py  multiselect_muxer_interface.py
pubsub/: PubsubNotifee.py  floodsub.py  message.py  pubsub.py  pubsub_router_interface.py
py_ipfs_lite/: __init__.py  api.py  car.py  cli.py  config.py  dag_utils.py  exceptions.py  interfaces.py  ipns.py  main.py  metrics.py  parser.py  peer.py  pin.py  reprovider.py  routing.py  setup.py  versioning.py
py_node_data/: pins.json
scripts/: audit_paths.py  check_rst.py  generate_dependency_graph.py  generate_transitive_dependency_graph.py  integrate_oso.py  interop_all.sh  (+6 more)
scripts/transport-interop/rust-local/: Cargo.toml  README.md  build.sh
scripts/transport-interop/rust-local/pkg/: README.md  interop_tests.d.ts  interop_tests.js  interop_tests_bg.wasm  interop_tests_bg.wasm.d.ts  package.json  readme.md
tests/interop/rust_libp2p/rust_node/: Cargo.toml
tests/interop/rust_libp2p/rust_node/src/: main.rs
(+2204 files in other folders)
