[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-ipfs-lite"
version = "0.1.1"
description = "Embeddable lightweight IPFS peer for Python (bootstrap phase)"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "Apache-2.0 OR MIT" }
authors = [
  { name = "py-ipfs-lite contributors" }
]
keywords = ["ipfs", "libp2p", "bitswap", "unixfs", "ipld"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "fastapi>=0.137.1",
  "httpx>=0.28.1",
  "hypercorn>=0.18.0",
  "libp2p",
  "prometheus-client>=0.25.0",
  "python-dotenv>=1.2.2",
  "python-multipart>=0.0.32",
]

[project.scripts]
py-ipfs-lite = "py_ipfs_lite.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.1",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "ruff>=0.6.0",
  "mdformat>=0.7.22",
  "mdformat-gfm",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "pytest-trio>=0.8.0",
  "pytest-xdist>=3.5.0",
]
docs = [
  "mkdocs-material>=9.0.0",
  "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/IPFS-Meshkit/py-ipfs-lite"
Repository = "https://github.com/IPFS-Meshkit/py-ipfs-lite"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["py_ipfs_lite*"]
exclude = ["tests*", "examples*", "interop*"]

[tool.setuptools.package-data]
py_ipfs_lite = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D203",
    "D204",
    "D205",
    "D212",
    "D400",
    "D401",
    "D412",
    "D415",
]

[tool.ruff.lint.isort]
known-first-party = ["py_ipfs_lite", "tests"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E501", "D", "E402", "F"]
"tests/*" = ["E501", "D", "E402", "F841"]
"interop/*" = ["E501", "D", "E402"]
"py_ipfs_lite/api.py" = ["E501", "E402"]
"py_ipfs_lite/peer.py" = ["E501", "E402", "D200"]
"py_ipfs_lite/versioning.py" = ["E501"]
"py_ipfs_lite/cli.py" = ["E402"]
"py_ipfs_lite/interfaces.py" = ["E402"]
"py_ipfs_lite/ipns.py" = ["E402"]
"py_ipfs_lite/dag_utils.py" = ["E722"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
incremental = false
ignore_missing_imports = true

[tool.uv.workspace]
members = [
    "extra/py-libp2p",
]

[tool.uv.sources]
libp2p = { workspace = true, editable = true }
