[package]
name = "local-wasm-ping"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasm_ping"
path = "src/bin/wasm_ping.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.34", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thirtyfour = "0.32"
rust-embed = "8.0"
mime_guess = "2.0"
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.23", default-features = false, features = ["tokio-comp"] }
