[package]
name = "rust_node"
version = "0.1.0"
edition = "2021"

[dependencies]
    libp2p = { version = "0.54", features = ["noise", "ping", "tcp", "tokio", "yamux","macros"] }
    futures = "0.3.30"
    tokio = { version = "1.37.0", features = ["full"] }
    tracing-subscriber = { version = "0.3", features = ["env-filter"] }
